--- a/index.html
+++ b/index.html
@@ -1,55 +1,66 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="ru">
+<head>
     <meta charset="UTF-8">
-    <title>Алексей Примадонин, Web-разработчик</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Резюме</title>
 </head>
-  <body>
-    <div id="header">
-     <h1>Алексей Примадонин</h1>  
-     <h3>Web-разработчик</h3>    
-     <p> 
-        <a href="mailto:ap@somemail.com">ap@somemail.com</a>,
-        <a href="https://github.com/alprima">github.com/alprima</a>  
-     </p>
-    </div>
-    <div id="main">
-        <div>Я увлекаюсь веб-дизайном со страших классов школы. Начал с мини-сайтов для себя и друзей, 
-            потом для метсных фирм и организаций. После курсов Hexlet начал работу веб-разработчиком. 
-            Пишу на JS(ES6), люблю функциональное программирование. 
-        </div><br>
-        <p>Готов к удаленной работе и релокации</p>
-    <h2>Опыт работы</h2><hr>
-        <h3>Майкрософт Россия</h3>
-        <div>Программист (стажировка)</div> 
-             <ul> 
-                <li>Работа в команде на С#</li> 
-                <li>Создание Веб-сайта проекта JDX</li> 
-            </ul> 
-        <h3>ТОО "Винная Баня"</h3> 
-        <div>Веб-дизайн</div> 
-            <ul> 
-                <li>Верстка макетов</li> 
-                <li>Разработка тем для Wordpress</li> 
-                <li>Поддержка сайта</li> 
-            </ul> 
-    <h2>Образование</h2> <hr> 
-        <h3>Университет имени Патриса Лумумбы</h3> 
-        <div>Бакалавр информационных систем, 2012-2016</div> 
-        <h3>Хекслет</h3> 
-        <div>Курсы по программированию, JS Backend/Frontend</div> 
-    <h2>Другие навыки и увлечения</h2> 
-        <ul> 
-            <li>Основы дизайна и типографики</li>
-            <li>Любительская игра на гитаре</li> 
-            <li>Хоккей на траве(городская лига)</li> 
-        </ul> 
-    </main>
-    </div>                    
-    <div id="footer"> 
-        <h4>Алексей Примадонин</h4> 
-        <div>ул.Стартовая,12,Новосибирск,Россия,+73831270001,<a href="mailto:ap@somemail.com">ap@somemail.com</a></div> 
-    </div> 
-  </body>
+<body>
+    <header>
+        <div>
+            <h1 align=center>Мандриченко Олег Дмитриевич</h1>
+            <h3 align=center>web-разработчик</h3>
+            <hr>    
+        </div>
+    </header>
+    <content>
+        <div>
+            <img align="right" src="myphoto.jpg" alt="my photo" />
+            <p>Возраст <strong>30 лет (23.10.1989 г.Харьков)</strong></p>
+            <p>Город <strong>Днепр</strong></p>
+            <p>Номер телефона: <strong>+380953827681</strong></p>
+            <p>Email: <strong>mandrik89@gmail.com</strong></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/oleg-mandrychenko-b55719158/">LinkedIn</a></p>
+        </div>
+        
+        <table border="2">
+            <caption><strong>Образование. Места Работы</strong></caption>
+                <tr><td>Харьковский лицей искусств</td></tr>
+                <tr><td>Харьковская государственная академия культуры</td></tr>
+                <tr><td>Слобажанский ансамбль песни и танца</td></tr>
+                <tr><td>Ocean Spring Resort. Xi'an. China</td></tr>
+                <tr><td>Tianhan theatre. Changsha. China</td></tr>
+                <tr><td>Chimelong international Circus. Guangzhou. China</td></tr>
+         </table>
+         <div>
+            <h2>О себе</h2>
+            <ul>
+                <li>Имею высшее образование. (Хореографическое)</li>
+                <li>Языки - Русский, Украинский, Английский(средний), Китайский(базовый)</li>
+                <li>Влдениие ПК на уровне опытного пользователя</li>
+                <li>Базовые знания oc Windows, Linux.</li>
+                <li>Базовые знания синтаксиса HTML,CSS,JS,Python</li>
+                <li>Базовые навыки рабоыт с Git, Github</li>
+            </ul>
+        </div>
+        <div>
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+        </div>
+    </content> 
+    <footer>
+        <p align="center"><strong>2019</strong></p>
+    </footer>
+</body>
 </html>
