--- a/index.html
+++ b/index.html
@@ -1,66 +1,57 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Резюме</title>
 </head>
+
 <body>
     <header>
-        <div>
-            <h1 align=center>Мандриченко Олег Дмитриевич</h1>
-            <h3 align=center>web-разработчик</h3>
-            <hr>    
+        <div class="language" align="right"><a href="en/index.html">EN</a></div>
+        <div class="name">
+            <h1>Олег Мандриченко</h1>
+            <h3>Web-разработчик</h3>
         </div>
     </header>
-    <content>
-        <div>
+
+    <main>
+        <div class="bio">
             <img align="right" src="myphoto.jpg" alt="my photo" />
             <p>Возраст <strong>30 лет (23.10.1989 г.Харьков)</strong></p>
             <p>Город <strong>Днепр</strong></p>
-            <p>Номер телефона: <strong>+380953827681</strong></p>
+            <p>Номер телефона:<strong>+380953827681</strong></p>
             <p>Email: <strong>mandrik89@gmail.com</strong></p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/oleg-mandrychenko-b55719158/">LinkedIn</a></p>
+            <p>Github: <a href="https://github.com/OLG-MAN">Github</a></p>
         </div>
-        
-        <table border="2">
-            <caption><strong>Образование. Места Работы</strong></caption>
-                <tr><td>Харьковский лицей искусств</td></tr>
-                <tr><td>Харьковская государственная академия культуры</td></tr>
-                <tr><td>Слобажанский ансамбль песни и танца</td></tr>
-                <tr><td>Ocean Spring Resort. Xi'an. China</td></tr>
-                <tr><td>Tianhan theatre. Changsha. China</td></tr>
-                <tr><td>Chimelong international Circus. Guangzhou. China</td></tr>
-         </table>
-         <div>
-            <h2>О себе</h2>
+        <div class="skills">
+            <h2>Навыки</h2>
             <ul>
-                <li>Имею высшее образование. (Хореографическое)</li>
-                <li>Языки - Русский, Украинский, Английский(средний), Китайский(базовый)</li>
-                <li>Влдениие ПК на уровне опытного пользователя</li>
-                <li>Базовые знания oc Windows, Linux.</li>
-                <li>Базовые знания синтаксиса HTML,CSS,JS,Python</li>
-                <li>Базовые навыки рабоыт с Git, Github</li>
+                <li>Опытный пользователь ПК</li>
+                <li>Опытный пользователь Windows (7,8,10), Linux (Ubuntu).</li>
+                <li>Базовые знания HTML5, CSS3, JS, JQuery, AJAX, Bootstrap4, PHP7.</li>
+                <li>Навыки работы с Git, Github, bash</li>
+                <li>Имею высшее гуманитарное образование.</li>
+                <li>Знания языков - Русский, Украинский, Английский(intermediate), Китайский(hsk2)</li>
             </ul>
         </div>
-        <div>
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+        <div class="test-sites">
+            <h2>Примеры тестовых сайтов</h2>
+            <p><a href="https://olg-man.github.io/test-website_apartments/">test-site-apartments</a></p>
+            <p><a href="https://olg-man.github.io/test-website_shop_bs4/">test-site-shop-mdb</a></p>
+            <p><a href="https://olg-man.github.io/test-website-design-studio/">test-site-design-studio</a></p>
+            <p><a href="https://olg-man.github.io/test-cv-flex/">test-cv-flex</a></p>
+            <p><a href="https://olg-man.github.io/demoshop1.github.io/">demo-shop</a>"в процессе создания.."</p>
+
         </div>
-    </content> 
+    </main>
     <footer>
-        <p align="center"><strong>2019</strong></p>
+        <p align="center"><strong>2020</strong></p>
     </footer>
 </body>
+
 </html>
