--- a/index.html
+++ b/index.html
@@ -5,28 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>Резюме</title>
 </head>
 
 <body>
     <header>
-        <div class="language" align="right"><a href="en/index.html">EN</a></div>
+        <div class="language"><a href="index_en.html">EN</a></div>
         <div class="name">
             <h1>Олег Мандриченко</h1>
-            <h3>Web-разработчик</h3>
+            <h3>Web developer</h3>
         </div>
     </header>
 
     <main>
-        <div class="bio">
-            <img align="right" src="myphoto.jpg" alt="my photo" />
-            <p>Возраст <strong>30 лет (23.10.1989 г.Харьков)</strong></p>
-            <p>Город <strong>Днепр</strong></p>
-            <p>Номер телефона:<strong>+380953827681</strong></p>
-            <p>Email: <strong>mandrik89@gmail.com</strong></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/oleg-mandrychenko-b55719158/">LinkedIn</a></p>
-            <p>Github: <a href="https://github.com/OLG-MAN">Github</a></p>
+        <div class="bio-container">
+            <div class="bio">
+                <p>Возраст <strong>30 лет (23.10.1989 г.Харьков)</strong></p>
+                <p>Город <strong>Днепр</strong></p>
+                <p>Номер телефона:<strong>+380953827681</strong></p>
+                <p>Email: <strong>mandrik89@gmail.com</strong></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/oleg-mandrychenko-b55719158/">LinkedIn</a></p>
+                <p>Github: <a href="https://github.com/OLG-MAN">Github</a></p>
+            </div>
+            <div class="image">
+                <img src="img/myphoto.jpg" alt="my photo" />
+            </div>
         </div>
         <div class="skills">
             <h2>Навыки</h2>
@@ -41,16 +46,20 @@
         </div>
         <div class="test-sites">
             <h2>Примеры тестовых сайтов</h2>
-            <p><a href="https://olg-man.github.io/test-website_apartments/">test-site-apartments</a></p>
-            <p><a href="https://olg-man.github.io/test-website_shop_bs4/">test-site-shop-mdb</a></p>
-            <p><a href="https://olg-man.github.io/test-website-design-studio/">test-site-design-studio</a></p>
-            <p><a href="https://olg-man.github.io/test-cv-flex/">test-cv-flex</a></p>
-            <p><a href="https://olg-man.github.io/demoshop1.github.io/">demo-shop</a>"в процессе создания.."</p>
-
+            <ul>
+                <li><a href="https://olg-man.github.io/test-website_apartments/">test-site-apartments</a></li>
+                <li><a href="https://olg-man.github.io/test-website_shop_bs4/">test-site-shop-mdb</a></li>
+                <li><a href="https://olg-man.github.io/test-website-design-studio/">test-site-design-studio</a></li>
+                <li><a href="https://olg-man.github.io/test-cv-flex/">test-cv-flex</a></li>
+                <li><a href="https://olg-man.github.io/demoshop1.github.io/">demo-shop</a></li>
+            </ul>
+        </div>
+        <div class="me">
+            <p>Looking for a Junior/Trainee vacancies. Ready to learn. Ready to trial period.</p>
         </div>
     </main>
     <footer>
-        <p align="center"><strong>2020</strong></p>
+        <p><strong>2020</strong></p>
     </footer>
 </body>
 
