--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e3a13122ef.js" crossorigin="anonymous"></script>
     <title>Резюме</title>
 </head>
 
@@ -14,20 +15,20 @@
     <header>
         <div class="language"><a href="index_en.html">EN</a></div>
         <div class="name">
-            <h1>Олег Мандриченко</h1>
-            <h3>Web developer</h3>
+            <h1>ОЛЕГ МАНДРИЧЕНКО</h1>
+            <h3>Web-developer(Junior/trainee)</h3>
         </div>
     </header>
 
     <main>
         <div class="bio-container">
             <div class="bio">
-                <p>Возраст <strong>30 лет (23.10.1989 г.Харьков)</strong></p>
-                <p>Город <strong>Днепр</strong></p>
-                <p>Номер телефона:<strong>+380953827681</strong></p>
+                <p>Возраст: <strong>30 лет (23.10.1989 г.Харьков)</strong></p>
+                <p>Город: <strong>Днепр</strong></p>
+                <p>Номер телефона: <strong>+380953827681</strong></p>
                 <p>Email: <strong>mandrik89@gmail.com</strong></p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/oleg-mandrychenko-b55719158/">LinkedIn</a></p>
-                <p>Github: <a href="https://github.com/OLG-MAN">Github</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/oleg-mandrychenko-b55719158/"><i class="fab fa-linkedin-in"></i></a></p>
+                <p>Github: <a href="https://github.com/OLG-MAN"><i class="fab fa-github"></i></a></p>
             </div>
             <div class="image">
                 <img src="img/myphoto.jpg" alt="my photo" />
@@ -41,7 +42,7 @@
                 <li>Базовые знания HTML5, CSS3, JS, JQuery, AJAX, Bootstrap4, PHP7.</li>
                 <li>Навыки работы с Git, Github, bash</li>
                 <li>Имею высшее гуманитарное образование.</li>
-                <li>Знания языков - Русский, Украинский, Английский(intermediate), Китайский(hsk2)</li>
+                <li>Знания языков - Русский, Украинский, Английский(intermediate), Китайский(HSK2)</li>
             </ul>
         </div>
         <div class="test-sites">
@@ -55,7 +56,8 @@
             </ul>
         </div>
         <div class="me">
-            <p>Looking for a Junior/Trainee vacancies. Ready to learn. Ready to trial period.</p>
+            <p>Ищу должность junior разработчика/trainee (Front-end/PHP). Готов обучаться. Готов к испытательному периоду.</p>
+            <p>Имею большой опыт работы за границей в сфере развлечений и продаж.</p>
         </div>
     </main>
     <footer>
