--- a/index_en.html
+++ b/index_en.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <title>Резюме</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e3a13122ef.js" crossorigin="anonymous"></script>
+    <title>Resume</title>
 </head>
 
 <body>
@@ -21,12 +23,12 @@
     <main>
         <div class="bio-container">
             <div class="bio">
-                <p>Age <strong>30 years</strong></p>
-                <p>City <strong>Dnipro</strong></p>
-                <p>Tel number:<strong>+380953827681</strong></p>
+                <p>Age: <strong>30 years</strong></p>
+                <p>City: <strong>Dnipro</strong></p>
+                <p>Tel number: <strong>+380953827681</strong></p>
                 <p>Email: <strong>mandrik89@gmail.com</strong></p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/oleg-mandrychenko-b55719158/">LinkedIn</a></p>
-                <p>Github: <a href="https://github.com/OLG-MAN">Github</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/oleg-mandrychenko-b55719158/"><i class="fab fa-linkedin-in"></i></a></p>
+                <p>Github: <a href="https://github.com/OLG-MAN"><i class="fab fa-github"></i></a></p>
             </div>
             <div class="image">
                 <img src="img/myphoto.jpg" alt="my photo" />
@@ -38,9 +40,9 @@
                 <li>Advanced PC User</li>
                 <li>Advanced user of Windows (7,8,10), Linux (Ubuntu).</li>
                 <li>Basic knowledge HTML5, CSS3, JS, JQuery, AJAX, Bootstrap4, PHP7.</li>
-                <li>Have expirience with Git, Github, bash</li>
+                <li>Have experience with Git, Github, bash</li>
                 <li>Have a higher Education. Humanitarian.</li>
-                <li>Languages - Russian, Ukrainian, English(intermediate), Chinese-simplfied(hsk2)</li>
+                <li>Languages - Russian, Ukrainian, English(intermediate), Chinese-simplified(HSK2)</li>
             </ul>
         </div>
         <div class="test-sites">
@@ -54,7 +56,8 @@
             </ul>
         </div>
         <div class="me">
-            <p>Looking for a Junior/Trainee vacancies. Ready to learn. Ready to trial period.</p>
+            <p>Looking for a Junior/Trainee vacancies (Front-end/PHP). Ready to learn. Ready to trial period.</p>
+            <p>Have extensive experience working abroad in the field of entertainment and sales.</p>
         </div>
     </main>
     <footer>
