--- a/index_en.html
+++ b/index_en.html
@@ -56,8 +56,7 @@
             </ul>
         </div>
         <div class="me">
-            <p>Looking for a Junior/Trainee vacancies (Front-end/PHP). Ready to learn. Ready to trial period.</p>
-            <p>Have extensive experience working abroad in the field of entertainment and sales.</p>
+            <p>Looking for a Junior/Trainee vacancies (Front-end/PHP). Ready to learn. Ready to trial period.<br>Have extensive experience working abroad in the field of entertainment and sales.</p>
         </div>
     </main>
     <footer>
