--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
             </ul>
         </div>
         <div class="me">
-            <p>Ищу должность junior разработчика/trainee (Front-end/PHP). Готов обучаться. Готов к испытательному периоду.</p>
-            <p>Имею большой опыт работы за границей в сфере развлечений и продаж.</p>
+            <p>Ищу должность junior разработчика/trainee (Front-end/PHP). Готов обучаться. Готов к испытательному периоду.<br>Имею большой опыт работы за границей в сфере развлечений и продаж.</p>
         </div>
     </main>
     <footer>
