--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <div class="bio-container">
             <div class="bio">
-                <p>Возраст: <strong>30 лет (23.10.1989 г.Харьков)</strong></p>
+                <p>Возраст: <strong>30 лет</strong></p>
                 <p>Город: <strong>Днепр</strong></p>
                 <p>Номер телефона: <strong>+380953827681</strong></p>
                 <p>Email: <strong>mandrik89@gmail.com</strong></p>
