--- a/index_en.html
+++ b/index_en.html
@@ -39,24 +39,14 @@
             <ul>
                 
                 <li>Advanced user of Windows (7,8,10), Linux (Ubuntu).</li>
-                <li>Basic knowledge HTML5, CSS3, JS, JQuery, AJAX, Bootstrap4, PHP7.</li>
+                <li>Basic knowledge HTML5, CSS3, JS, JQuery, Bootstrap4, PHP7, Symfony</li>
                 <li>Have experience with Git, Github, bash</li>
                 <li>Have a higher Education. Humanitarian.</li>
-                <li>Languages - Russian, Ukrainian, English(intermediate), Chinese-simplified(HSK2)</li>
+                <li>Languages - English(intermediate), Chinese-simplified(hsk2), Russian(native), Ukrainian(native)</li>
             </ul>
-        </div>
-        <div class="test-sites">
-            <h2>My test works.</h2>
-            <ul>
-                <li><a href="https://olg-man.github.io/test-website_apartments/">test-site-apartments</a></li>
-                <li><a href="https://olg-man.github.io/test-website_shop_bs4/">test-site-shop-mdb</a></li>
-                <li><a href="https://olg-man.github.io/test-website-design-studio/">test-site-design-studio</a></li>
-                <li><a href="https://olg-man.github.io/test-cv-flex/">test-cv-flex</a></li>
-                <li><a href="https://olg-man.github.io/demoshop1.github.io/">demo-shop</a></li>
-            </ul>
-        </div>
+        </div>            
         <div class="me">
-            <p>Looking for a Junior/Trainee vacancies (Front-end/PHP). Ready to learn. Ready to trial period.<br>Have extensive experience working abroad in the field of entertainment and sales.</p>
+            <p>Looking for a Junior developer vacancies (PHP). Ready to learn. Ready to trial period.<br>Have extensive experience working abroad in the field of entertainment and sales.</p>
         </div>
     </main>
     <footer>
