--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         <div class="work">
             <h2>Опыт работы</h2>
             <ul>
-                <li>06.2016-11.2019 Chimelong Resort. Артист.Танцор. Гуанчжоу.Китай.</li>
+                <li>06.2016-11.2019 Chimelong Resort. Performer.Dancer. Гуанчжоу.Китай.</li>
                 <li>12.2015-05.2016 Tianhan grand theatre. Performer.Dancer. Чанша.Китай.</li>
-                <li>06.2013-12.2015 Ocean Spring Resort. Performer.Dancer.Сиань.Китай.</li>
+                <li>06.2013-12.2015 Ocean Spring Resort. Performer.Dancer. Сиань.Китай.</li>
                 <li>06.2011-05.2013 Слобожанский ансамбль песни и танца. Артист Балета. Харьков.Украина.</li>
                 <li>01.2008-06.2010 ХНАТОБ. Артист массовки. Харьков.Украина.</li>
             </ul>
