--- a/index_en.html
+++ b/index_en.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e3a13122ef.js" crossorigin="anonymous"></script>
-    <title>Resume</title>
+    <title>OLEG.M</title>
 </head>
 
 <body>
@@ -37,16 +37,49 @@
         <div class="skills">
             <h2>Skills</h2>
             <ul>
-                
-                <li>Advanced user of Windows (7,8,10), Linux (Ubuntu).</li>
+                <li>Advanced user of Windows, Linux (Ubuntu).</li>
                 <li>Basic knowledge HTML5, CSS3, JS, JQuery, Bootstrap4, PHP7, Symfony</li>
                 <li>Have experience with Git, Github, bash</li>
-                <li>Have a higher Education. Humanitarian.</li>
-                <li>Languages - English(intermediate), Chinese-simplified(hsk2), Russian(native), Ukrainian(native)</li>
             </ul>
-        </div>            
+        </div> 
+        
+        <div class="education">
+            <h2>Education</h2>
+            <ul>
+                <li>12.2019-03.2020  Skillup Courses. PHP-development.</li>
+                <li>01.2020-02.2020  Learn.by education platform. Software testing introduction. </li>
+                <li>02.2020-03.2020  ITVDN education platfrom. QA Starter.</li>
+                <li>09.2007-06.2012  Krarkiv Academy of Culture. Choreography Art.</li>
+            </ul>
+        </div>
+
+        <div class="languages">
+            <h2>Languages</h2>
+            <ul>
+                <li>English (intermediate)</li>
+                <li>Chinese-simplified (hsk2)</li>
+                <li>Russian (native)</li>
+                <li>Ukrainian (native)</li>
+            </ul>
+        </div>
+
+        <div class="work">
+            <h2>Working expirience</h2>
+            <ul>
+                <li>06.2016-11.2019 Chimelong Resort. Performer.Dancer. Guangzhou.China.</li>
+                <li>12.2015-05.2016 Tianhan grand theatre. Performer.Dancer. Changsha.China.</li>
+                <li>06.2013-12.2015 Ocean Spring Resort. Performer.Dancer. Xi'an.China.</li>
+                <li>06.2011-05.2013 Slobozhansky Great Song and Dance Ensemble. Artist of Ballet. Kharkiv.Ukraine.</li>
+                <li>01.2008-06.2010 Kharkiv National Academic Opera and Ballet Theatre. Artist of mass scenes. Kharkiv.Ukraine.</li>
+            </ul>
+        </div>
+
         <div class="me">
-            <p>Looking for a Junior developer vacancies (PHP). Ready to learn. Ready to trial period.<br>Have extensive experience working abroad in the field of entertainment and sales.</p>
+            <p><strong>About</strong></p>
+            <p>Have extensive experience working abroad in the field of entertainment and sales.
+            <br>Looking for a Junior developer vacancies (PHP). Ready to learn. Ready to trial period.
+            <br>I’m looking for an interesting project with mentor support, and have a great desire to progress and become a cool, highly qualified specialist.
+        </p>
         </div>
     </main>
     <footer>
