--- a/index_en.html
+++ b/index_en.html
@@ -25,10 +25,11 @@
             <div class="bio">
                 <p>Age: <strong>30 years</strong></p>
                 <p>City: <strong>Dnipro</strong></p>
-                <p>Tel number: <strong>+380953827681</strong></p>
+                <p>Tel: <strong>+380953827681</strong></p>
                 <p>Email: <strong>mandrik89@gmail.com</strong></p>
                 <p>LinkedIn: <a href="https://www.linkedin.com/in/oleg-mandrychenko-b55719158/"><i class="fab fa-linkedin-in"></i></a></p>
                 <p>Github: <a href="https://github.com/OLG-MAN"><i class="fab fa-github"></i></a></p>
+                <p>Telegram: <a href="https://t.me/Olegan89"><i class="fab fa-telegram"></i></a></p>
             </div>
             <div class="image">
                 <img src="img/myphoto.jpg" alt="my photo" />
