--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e3a13122ef.js" crossorigin="anonymous"></script>
-    <title>Резюме</title>
+    <title>ОЛЕГ МАНДРИЧЕНКО</title>
 </head>
 
 <body>
