--- a/index_en.html
+++ b/index_en.html
@@ -40,7 +40,7 @@
             <ul>
                 <li>Advanced user of Windows, Linux (Ubuntu).</li>
                 <li>Basic knowledge HTML5, CSS3, JS, JQuery, Bootstrap4, PHP7, Symfony</li>
-                <li>Have experience with Git, Github, bash</li>
+                <li>Have experience with Git, Github, bash, SQL, Mysql.</li>
             </ul>
         </div> 
         
