--- a/index_en.html
+++ b/index_en.html
@@ -38,8 +38,8 @@
         <div class="skills">
             <h2>Skills</h2>
             <ul>
+                <li>Basic knowledge HTML5|CSS3|JS|JQuery|Bootstrap4|PHP7|Symfony</li>
                 <li>Advanced user of Windows, Linux (Ubuntu).</li>
-                <li>Basic knowledge HTML5, CSS3, JS, JQuery, Bootstrap4, PHP7, Symfony</li>
                 <li>Have experience with Git, Github, bash, SQL, Mysql.</li>
             </ul>
         </div> 
