--- a/index_en.html
+++ b/index_en.html
@@ -38,8 +38,8 @@
         <div class="skills">
             <h2>Skills</h2>
             <ul>
-                <li>Basic knowledge HTML5|CSS3|JS|JQuery|Bootstrap4|PHP7|Symfony</li>
-                <li>Advanced user of Windows, Linux (Ubuntu).</li>
+                <li>Basic knowledge HTML5, CSS3, JS, JQuery, Bootstrap4, PHP7, Symfony</li>
+                <li>Advanced user of Windows, Linux(Ubuntu).</li>
                 <li>Have experience with Git, Github, bash, SQL, Mysql.</li>
             </ul>
         </div> 
@@ -77,7 +77,7 @@
 
         <div class="me">
             <p><strong>About</strong></p>
-            <p>Have extensive experience working abroad in the field of entertainment and sales.
+            <p>I have extensive experience working abroad in the field of entertainment and sales.
             <br>Looking for a Junior developer vacancies (PHP). Ready to learn. Ready to trial period.
             <br>I’m looking for an interesting project with mentor support, and have a great desire to progress and become a cool, highly qualified specialist.
         </p>
