--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <div class="skills">
             <h2>Навыки</h2>
             <ul>
-                <li>Windows, Linux (Ubuntu).</li>
                 <li>Базовые знания HTML5, CSS3, JS, JQuery, Bootstrap4, PHP7, Symfony</li>
-                <li>Опыт работы с Git, Github, bash</li>
+                <li>Навыки администрирования Windows, Linux(Ubuntu).</li>
+                <li>Опыт работы с Git, Github, bash, SQL, Mysql</li>
             </ul>
         </div>
 
