--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="skills">
             <h2>Навыки</h2>
             <ul>
-                <li>Базовые знания HTML5, CSS3, JS, JQuery, Bootstrap4, PHP7, Symfony</li>
+                <li>HTML5, CSS3, JS, JQuery, Bootstrap4, PHP7, Symfony</li>
                 <li>Навыки администрирования Windows, Linux(Ubuntu).</li>
                 <li>Опыт работы с Git, Github, bash, SQL, Mysql</li>
             </ul>
