--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="language"><a href="index_en.html">EN</a></div>
         <div class="name">
             <h1>ОЛЕГ МАНДРИЧЕНКО</h1>
-            <h3>Web-developer(Junior)</h3>
+            <h3>Web-developer</h3>
         </div>
     </header>
 
