--- a/index_en.html
+++ b/index_en.html
@@ -50,7 +50,7 @@
                 <li>12.2019-03.2020  Skillup Courses. PHP-development.</li>
                 <li>01.2020-02.2020  Learn.by education platform. Software testing introduction. </li>
                 <li>02.2020-03.2020  ITVDN education platfrom. QA Starter.</li>
-                <li>09.2007-06.2012  Krarkiv Academy of Culture. Choreography Art.</li>
+                <li>09.2007-06.2012  Kharkiv Academy of Culture. Choreography Art.</li>
             </ul>
         </div>
 
@@ -80,7 +80,7 @@
             <p>I have extensive experience working abroad in the field of entertainment and sales.
             <br>Looking for a Junior developer vacancies (PHP). Ready to learn. Ready to trial period.
             <br>I’m looking for an interesting project with mentor support, and have a great desire to progress and become a cool, highly qualified specialist.
-        </p>
+            </p>
         </div>
     </main>
     <footer>
