--- a/index.html
+++ b/index.html
@@ -1,92 +1,180 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
+<title>OLEG MANDRYCHENKO</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+  html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
+</style>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/e3a13122ef.js" crossorigin="anonymous"></script>
-    <title>ОЛЕГ МАНДРИЧЕНКО</title>
-</head>
+<body class="w3-light-grey">
 
-<body>
-    <header>
-        <div class="language"><a href="index_en.html">EN</a></div>
-        <div class="name">
-            <h1>ОЛЕГ МАНДРИЧЕНКО</h1>
-            <h3>Web-developer</h3>
-        </div>
-    </header>
+  <!-- Page Container -->
+  <div class="w3-content w3-margin-top" style="max-width:1400px;">
 
-    <main>
-        <div class="bio-container">
-            <div class="bio">
-                <p>Возраст: <strong>30 лет</strong></p>
-                <p>Город: <strong>Днепр</strong></p>
-                <p>Тел: <strong>+380953827681</strong></p>
-                <p>Email: <strong>mandrik89@gmail.com</strong></p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/oleg-mandrychenko-b55719158/"><i class="fab fa-linkedin-in"></i></a></p>
-                <p>Github: <a href="https://github.com/OLG-MAN"><i class="fab fa-github"></i></a></p>
-                <p>Telegram: <a href="https://t.me/Olegan89"><i class="fab fa-telegram"></i></a></p>
+    <!-- The Grid -->
+    <div class="w3-row-padding">
+
+      <!-- Left Column -->
+      <div class="w3-third">
+
+        <div class="w3-white w3-text-grey w3-card-4">
+          <div class="w3-display-container">
+            <div class="w3-display-topleft w3-container w3-text-white">
+              <h2>OLEG MANDRYCHENKO</h2>
             </div>
-            <div class="image">
-                <img src="img/myphoto.jpg" alt="my photo" />
+            <img src="img/myphoto2.jpg" style="width:100%" alt="Avatar">
+          </div>
+          <div class="w3-container">
+            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Junior Web-developer (PHP)</p>
+            <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Dnipro, Ukraine</p>
+            <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>mandrik89@gmail.com</p>
+            <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+380953827681</p>
+            <p><a href="https://t.me/Olegan89"><i
+                  class="fa fa-telegram fa-fw w3-margin-right w3-xlarge w3-text-blue"></i></a>
+              <a href="https://www.linkedin.com/in/oleg-mandrychenko-b55719158/"><i
+                  class="fa fa-linkedin w3-margin-right w3-xlarge w3-text-blue"></i></a>
+              <a href="https://github.com/OLG-MAN?tab=repositories"><i
+                  class="fa fa-github w3-margin-right w3-xlarge w3-text-blue"></i></a></p>
+
+            <hr>
+
+            <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
+            <p class="w3-large">Good Knowledge</p>
+            <p><b>HTML5, CSS3, Bootstrap, SQL, PHP7, OOP.</b></p>
+            <div class="w3-light-grey w3-round-xlarge">
+              <div class="w3-round-xlarge w3-teal" style="height:24px;width:80%"></div>
             </div>
-        </div>
-        <div class="skills">
-            <h2>Навыки</h2>
-            <ul>
-                <li>HTML5, CSS3, JS, JQuery, Bootstrap4, PHP7, Symfony</li>
-                <li>Навыки администрирования Windows, Linux(Ubuntu).</li>
-                <li>Опыт работы с Git, Github, bash, SQL, Mysql</li>
-            </ul>
+            <p class="w3-large">Basic Knowledge</p>
+            <p><b>JS, JQuery, Symfony.</b></p>
+            <div class="w3-light-grey w3-round-xlarge">
+              <div class="w3-round-xlarge w3-teal" style="height:24px;width:55%"></div>
+            </div>
+            <p class="w3-large">Have experience with</p>
+            <p><b> Git, Github, cli, bash, MySQL, Workbench, phpMyAdmin</b></p>
+            <div class="w3-light-grey w3-round-xlarge">
+              <div class="w3-round-xlarge w3-teal" style="height:24px;width:80%"></div>
+            </div>
+            <!-- <p>Add Skills</p>
+          <p></p> 
+          <div class="w3-light-grey w3-round-xlarge">
+            <div class="w3-round-xlarge w3-teal" style="height:24px;width:80%"></div>
+          </div> -->
+
+            <br>
+
+            <p class="w3-large w3-text-theme"><b><i
+                  class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
+            <p><b>English (B1)</b></p>
+            <div class="w3-light-grey w3-round-xlarge">
+              <div class="w3-round-xlarge w3-teal" style="height:24px;width:65%"></div>
+            </div>
+            <p><b>Chinese (HSK2)</b></p>
+            <div class="w3-light-grey w3-round-xlarge">
+              <div class="w3-round-xlarge w3-teal" style="height:24px;width:20%"></div>
+            </div>
+            <p><b>Russian (native)</b></p>
+            <div class="w3-light-grey w3-round-xlarge">
+              <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+            </div>
+            <br>
+            <p><b>Ukrainian (native)</b></p>
+            <div class="w3-light-grey w3-round-xlarge">
+              <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+            </div>
+            <br>
+          </div>
+        </div><br>
+
+        <!-- End Left Column -->
+      </div>
+
+      <!-- Right Column -->
+      <div class="w3-twothird">
+
+        <div class="w3-container w3-card w3-white w3-margin-bottom">
+          <h2 class="w3-text-grey w3-padding-16"><i
+              class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+          <div class="w3-container">
+            <h5 class="w3-opacity"><b>Skillup Courses. PHP-development.</b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12.2019-03.2020</h6>
+            <hr>
+          </div>
+          <div class="w3-container">
+            <h5 class="w3-opacity"><b>Learn.by education platform. Software testing introduction.</b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01.2020-02.2020</h6>
+            <hr>
+          </div>
+          <div class="w3-container">
+            <h5 class="w3-opacity"><b>ITVDN education platfrom. QA Starter.</b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>02.2020-03.2020</h6>
+            <hr>
+          </div>
+          <div class="w3-container">
+            <h5 class="w3-opacity"><b>Kharkiv Academy of Culture. Choreography Art.</b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>09.2007-06.2012</h6>
+            <hr>
+          </div>
         </div>
 
-        <div class="education">
-            <h2>Образование</h2>
-            <ul>
-                <li>12.2019-03.2020 Курсы Skillup. PHP-разработчик.</li>
-                <li>01.2020-02.2020 Онлайн платформа Learn.by. Основы программного тестирования. </li>
-                <li>02.2020-03.2020 Онлайн платформа ITVDN. QA Starter.</li>
-                <li>09.2007-06.2012 ХДАК. Факультет Хореографического искусства.</li>
-            </ul>
+        <div class="w3-container w3-card w3-white w3-margin-bottom">
+          <h2 class="w3-text-grey w3-padding-16"><i
+              class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
+          <div class="w3-container">
+            <h5 class="w3-opacity"><b>Chimelong Resort. Performer.Dancer. Guangzhou.China.</b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2016-11.2019</span></h6>
+            <hr>
+          </div>
+          <div class="w3-container">
+            <h5 class="w3-opacity"><b>Tianhan grand theatre. Performer.Dancer. Changsha.China.</b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12.2015-05.2016</h6>
+            <hr>
+          </div>
+          <div class="w3-container">
+            <h5 class="w3-opacity"><b>Ocean Spring Resort. Performer.Dancer. Xi'an.China.</b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2013-12.2015</h6>
+            <hr>
+          </div>
+          <div class="w3-container">
+            <h5 class="w3-opacity"><b>Slobozhansky Great Song and Dance Ensemble. Artist of Ballet. Kharkiv.Ukraine.</b>
+            </h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2011-05.2013</h6>
+            <hr>
+          </div>
+          <div class="w3-container">
+            <h5 class="w3-opacity"><b>Kharkiv National Academic Opera and Ballet Theatre. Artist of mass scenes.
+                Kharkiv.Ukraine.</b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01.2008-06.2010</h6>
+            <hr>
+          </div>
+
+          <div class="w3-container w3-margin-bottom">
+            <h3 class="w3-text-grey w3-padding-16">
+                <i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About</h3>
+            <h5 class="w3-opacity"><b>I have extensive experience working abroad in the field of entertainment and
+                sales. <br>
+                Looking for a Junior developer vacancies (PHP). Ready to learn. Ready to trial <br>
+                I’m looking for an interesting project with mentor support, and have a great desire to progress <br>
+                and become a cool, highly qualified specialist.<h5></b><br>
+          </div>
+
         </div>
 
-        <div class="languages">
-            <h2>Знание языков</h2>
-            <ul>
-                <li>Английский (intermediate)</li>
-                <li>Китайский (hsk2)</li>
-                <li>Русский</li>
-                <li>Украинский</li>
-            </ul>
-        </div>
+        <!-- End Right Column -->
+      </div>
 
-        <div class="work">
-            <h2>Опыт работы</h2>
-            <ul>
-                <li>06.2016-11.2019 Chimelong Resort. Performer.Dancer. Гуанчжоу.Китай.</li>
-                <li>12.2015-05.2016 Tianhan grand theatre. Performer.Dancer. Чанша.Китай.</li>
-                <li>06.2013-12.2015 Ocean Spring Resort. Performer.Dancer. Сиань.Китай.</li>
-                <li>06.2011-05.2013 Слобожанский ансамбль песни и танца. Артист Балета. Харьков.Украина.</li>
-                <li>01.2008-06.2010 ХНАТОБ. Артист массовки. Харьков.Украина.</li>
-            </ul>
-        </div>
+      <!-- End Grid -->
+    </div>
 
-        <div class="me">
-            <p><strong></strong></p>
-            <p>Имею большой опыт работы за границей в сфере развлечений и продаж.
-                <br>Ищу должность junior PHP разработчка. Готов обучаться. Готов к адекватной стажировке.
-                <br>Ищу интересный проект с менторской поддержкой, есть большое желание развиться и стать классным,
-                высококвалифицированный специалистом.
-            </p>
-        </div>
-    </main>
-    <footer>
-        <p><strong>2020</strong></p>
-    </footer>
+    <!-- End Page Container -->
+  </div>
+
+  <footer class="w3-container w3-teal w3-center w3-margin-top">
+    <p>2020</p>
+    <p><a href="index_ru.html" style="text-decoration: none;">Russian version</a></p>
+  </footer>
 </body>
-
 </html>
